--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "meu-projeto-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -47,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.1.0"
   }
 }
