--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.30.0",
     "domexception": "^4.0.0",
+    "dotenv": "^16.3.1",
     "firebase": "^9.23.0",
     "openai": "^4.24.0",
     "react": "^18.2.0",
